--- a/demo/index.html
+++ b/demo/index.html
@@ -3,30 +3,39 @@
 <html lang="en">
 <head>
   <title>TurfKit - Demo</title>
+  <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 
+  <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/lib/turf/turfkit.css" type="text/css" />
+
+  <script src="/lib/turf/turfkit.js"></script>
+
+  <script type="text/javascript" charset="utf-8">
+    $(function(){
+      new Turf.Application("restaurants.json");
+    });
+  </script>
 </head>
-<body>  
-  
+<body>
+
   <div id="container">
-    <div id="map" style="width: 700px; height: 400px;"></div>    
+    <a href="http://imulus.github.com/turfkit" id="logo"><b>Turf</b>Kit</a>
+
+    <div id="map"></div>
     <div id="filters"></div>
     <table id="results">
       <thead></thead>
       <tbody></tbody>
-    </table>    
+    </table>
   </div>
 
-  <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+  <div id="footer">
+    <a href="http://imulus.com" id="imulus">
+      <img src="http://imulus.github.com/coyote/images/imulus.png" />
+    </a>
+  </div>
 
-  <link rel="stylesheet" href="/lib/turf/turfkit.css" type="text/css" />
-  <script src="/lib/turf/turfkit.js"></script>
 
-	<script type="text/javascript" charset="utf-8">
-    $(function(){
-      var turf_app = new Turf.Application("container", "restaurants.json");
-    }); 
-	</script>
-  
 </body>
 </html>
