--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
 
   <script type="text/javascript" charset="utf-8">
     $(function(){
-      new Turf.Application("restaurants.json");
+      new Turf.Client.Application("restaurants.json");
     });
   </script>
 </head>
