Fix cap in link

--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,7 @@
 
   <header>
     <p>
-      <a href="http://imulus.github.com/turfkit" id="logo"><span>Turf</span>Kit</a>      
+      <a href="http://imulus.github.com/TurfKit" id="logo"><span>Turf</span>Kit</a>      
       A little library for building JSON-powered Google Maps applications
     </p>
   </header>
